--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>org.example</groupId>
     <artifactId>Wiederholungsuebung_141023</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
